<resources>
    <string name="app_name">Quiz App</string>
    <string name="ques1">1. Which of the following is a non metal that remains liquid at room temperature?</string>
    <string name="ques1a">Phosphorous</string>
    <string name="ques1b">Bromine</string>
    <string name="ques1d">Helium</string>
    <string name="ques1c">Chlorine</string>
    <string name="ques2">2. Chlorophyll is a naturally occurring chelate compound in which central metal is</string>
    <string name="ques2a">Copper</string>
    <string name="ques2b">Magnesium</string>
    <string name="ques2c">Iron</string>
    <string name="ques2d">Calcium</string>
    <string name="ques3">3. Which of the following is used in pencils?</string>
    <string name="ques3a">Graphite</string>
    <string name="ques3b">Silicon</string>
    <string name="ques3c">Charcoal</string>
    <string name="ques3d">Phosphorous</string>
    <string name="ques4">4. The gas usually filled in the electric bulb is</string>
    <string name="ques4a">Nitrogen</string>
    <string name="ques4b">Hydrogen</string>
    <string name="ques4c">Carbon dioxide</string>
    <string name="ques4d">Oxygen</string>
    <string name="ques5">5. Washing soda is the common name for</string>
    <string name="ques5a">Sodium carbonate</string>
    <string name="ques5b">Calcium bicarbonate</string>
    <string name="ques5c">Sodium bicarbonate</string>
    <string name="ques5d">Calcium carbonate</string>
    <string name="ques6">6. Which of the gas is not known as green house gas?</string>
    <string name="ques6a">Methane</string>
    <string name="ques6b">Nitrous oxide</string>
    <string name="ques6c">Carbon dioxide</string>
    <string name="ques6d">Hydrogen</string>
    <string name="ques7">7. Which of the following integers are multiples of both 2 and 3?</string>
    <string name="ques7a">8</string>
    <string name="ques7b">9</string>
    <string name="ques7c">12</string>
    <string name="ques7d">18</string>
    <string name="ques7e">21</string>
    <string name="ques7f">36</string>
    <string name="ques8">8. Non stick cooking utensils are coated with</string>
    <string name="ques8a">Teflon</string>
    <string name="ques8b">PVC</string>
    <string name="ques8c">Black paint</string>
    <string name="ques8d">Polystyrene</string>
    <string name="ques9">9. Carbon, diamond and graphite are together called</string>
    <string name="ques9a">Allotropes</string>
    <string name="ques9b">Isomers</string>
    <string name="ques9c">Isomorphs</string>
    <string name="ques9d">Isotopes</string>
    <string name="ques10">10. A person of good understanding knowledge and reasoning power</string>
    <string name="SubmitBtn">Submit</string>
</resources>
