<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques1"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/ques1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/ques1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques1a" />

            <RadioButton
                android:id="@+id/ques1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques1b" />


            <RadioButton
                android:id="@+id/ques1c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques1c" />

            <RadioButton
                android:id="@+id/ques1d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques1d" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques2"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/ques2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/ques2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques2a" />

            <RadioButton
                android:id="@+id/ques2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques2b" />


            <RadioButton
                android:id="@+id/ques2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques2c" />

            <RadioButton
                android:id="@+id/ques2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques2d" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques3"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/ques3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/ques3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques3a" />

            <RadioButton
                android:id="@+id/ques3b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques3b" />


            <RadioButton
                android:id="@+id/ques3c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques3c" />

            <RadioButton
                android:id="@+id/ques3d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques3d" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques4"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/ques4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/ques4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques4a" />

            <RadioButton
                android:id="@+id/ques4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques4b" />


            <RadioButton
                android:id="@+id/ques4c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques4c" />

            <RadioButton
                android:id="@+id/ques4d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques4d" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques5"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/ques5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/ques5a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques5a" />

            <RadioButton
                android:id="@+id/ques5b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques5b" />


            <RadioButton
                android:id="@+id/ques5c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques5c" />

            <RadioButton
                android:id="@+id/ques5d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques5d" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques6"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/ques6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/ques6a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques6a" />

            <RadioButton
                android:id="@+id/ques6b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques6b" />


            <RadioButton
                android:id="@+id/ques6c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques6c" />

            <RadioButton
                android:id="@+id/ques6d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques6d" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques7"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ques7a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ques7a" />

            <CheckBox
                android:id="@+id/ques7b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/ques7b" />

            <CheckBox
                android:id="@+id/ques7c"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/ques7c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ques7d"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ques7d" />

            <CheckBox
                android:id="@+id/ques7e"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/ques7e" />

            <CheckBox
                android:id="@+id/ques7f"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/ques7f" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques8"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/ques8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/ques8a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques8a" />

            <RadioButton
                android:id="@+id/ques8b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques8b" />

            <RadioButton
                android:id="@+id/ques8c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques8c" />

            <RadioButton
                android:id="@+id/ques8d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques8d" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques9"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/ques9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/ques9a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques9a" />

            <RadioButton
                android:id="@+id/ques9b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques9b" />


            <RadioButton
                android:id="@+id/ques9c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques9c" />

            <RadioButton
                android:id="@+id/ques9d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques9d" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ques10"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ques10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/SubmitBtn" />
    </LinearLayout>
</ScrollView>



